--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="header">
         <div class="header_logo">
-            <img src="../img/logo_car.png"><a href="index.html">YOUNG MOTORS</a>
+            <img src="logo_car.png"><a href="index.html">YOUNG MOTORS</a>
         </div>
         <ul class="header_menu">         
                 <li><a href="index.html">HOME</a></li>
@@ -24,9 +24,9 @@
                 <li><a href="#">contacto</a></li>    
         </ul>
         <ul class="header_icons">
-            <li><a href="#" class="header_icon1"><img src="../img/question.png"></a></li>
-            <li><a href="#" class="header_icon2"><img src="../img/user.png"></a></li>
-            <li><a href="#" class="header_toggleBtn"><img src="../img/menu_btn.png"></a></li>
+            <li><a href="#" class="header_icon1"><img src="question.png"></a></li>
+            <li><a href="#" class="header_icon2"><img src="user.png"></a></li>
+            <li><a href="#" class="header_toggleBtn"><img src="menu_btn.png"></a></li>
         </ul>
     </div>
     <!--//헤더-->
@@ -45,7 +45,7 @@
         <div class="content2">
             <div class="content2_box1">
                 <div class="content2_box1_img">
-                    <img src="../img/supermarket.png">
+                    <img src="supermarket.png">
                 </div>
                 <div class="content2_box1_tit">
                     <h2>COMPRA EN COREA</h2>
